cohesion fonctions et reglage dates